# Game_personality_analysis

./: .gitignore  CMakeLists.txt  Game_personality_analysis_ru_RU.ts  app_icon.rc  app_setting.cpp  app_setting.h  app_utility.cpp  app_utility.h  generate_version.bat  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  source.qrc  version.h
GUI/: mainwindow.cpp  mainwindow.h
GUI/info_dialog/: info_dialog.cpp  info_dialog.h  info_dialog.ui
bio_signal/analysis/EEG/: eeg.cpp  eeg.h
bio_signal/analysis/heart_rate_variability/: heart_rate_variability.cpp  heart_rate_variability.h
bio_signal/openBCI/: openBCI_manager.cpp  openBCI_manager.h  open_bci_setting.cpp  open_bci_setting.h  open_bci_setting.ui
game/1/: game_1.cpp  game_1.h  game_1.qml  game_1.ui
game/2/: game_2.cpp  game_2.h  game_2.qml  game_2.ui
game/3/: game_3.cpp  game_3.h  game_3.qml  game_3.ui
source/: deploy.bat  setting_app.json
